# halogo

./: .gitignore  Halogo.js  README.md  app.js  goai.onnx  halogo.js  package.json
cpp/: CMakeLists.txt
cpp/include/: DTNode.h  DTPlayer.h  Group.h  MCTSNode.h  MCTSPlayer.h  Moves.h  Player.h  Policy.h  Pool.h  Position.h  RandMove.h  Resnet.h  go.h  pool.h
cpp/include/pt/: Resnet.h
cpp/include/tf/: DTResnet.h  Resnet.h
cpp/src/: DTNode.cpp  DTPlayer.cpp  Group.cpp  MCTSNode.cpp  MCTSPlayer.cpp  Policy.cpp  Pool.cpp  Position.cpp  RandMove.cpp  Resnet.cpp  go.cpp  pool.cpp  xdebug.cpp  xrecord.cpp  xtesttf.cpp
cpp/src/random/: CMakeLists.txt  xdebug.cpp
cpp/src/tensorflow/: CMakeLists.txt  DTResnet.cpp  Resnet.cpp  xrecordtf.cpp
cpp/src/torch/: CMakeLists.txt  Resnet.cpp  xtorch.cpp
data/: 7_100_20180403_071014  record.json  resnet_pars.pkl
games/: rand-9.7z
py/: 7_1_20180306_172734  engine.py  eve.py  go.py  gtp.py  gtp_wrapper.py  mcts copy.py  mcts.py  nodejs.py  policy.py  pve.py  rand.py  randmove.py  resnet.py  resnet2.py  resnet_pars.pkl  strategies.py  train.py  utils.py  xONNX.py  xdebug.py  xestimtf.py  xgenonnx.py  xnodejs.py  xonnx2tf.py  xrecord.py  xresonable.py  xtest.py  xtftrain.py  xtrain.py  xtrain_kgs.py
py/log/: events.out.tfevents.1542161729.xie-600  events.out.tfevents.1542162763.xie-600  events.out.tfevents.1542162788.xie-600  events.out.tfevents.1542162837.xie-600  events.out.tfevents.1542162902.xie-600  events.out.tfevents.1542162939.xie-600
www/: debug.html  home.html
www/assets/: config.json  version.json  widget.json
www/assets/cfg/: go_map.json
www/assets/js/: EnterState.js  board.js  debug.js  main.js
www/assets/scn/: debug.scn  main.scn
www/js/: index.js
www/lib/: halo.js  halo.min.js
www/res/: config.json  effect.json  record.json  record_2.json  record_3.json  version.json  widget.json
www/res/js/: board.js  main.js
www/res/scn/: main.scn
